# tsp-simulated-annealing

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt
experiments/: chain_length_error.py  error_CS_data_prep.py  experiment_0.py  load_data.py  markov_chains.py  parameterisation.py  parameterisation_data_prep.py  plot_cooling_schedules.py  plot_solution.py  plot_temperature.py  plots.py  solve_problem.py  stat_tests.py
scripts/: combine_metadata.py  profile_code.py
src/tsp_simulated_annealing/: acceptance.py  cooling_schedules.py  data.py  main.py  tsp.py
tsp_problems/: test.txt
