[project]
name = "tsp-simulated-annealing"
version = "0.1.0"
description = "Solving TSP with simulated annealing"
readme = "README.md"
authors = [
    { name = "Henry Zwart", email = "henrybzwart@gmail.com" },
    { name = "Tika van Bennekum", email = "tika.v.bennekum@gmail.com" },
    { name = "Petr Chalupský", email = "chalupskypetr22@gmail.com"},
]

requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
